# genesis-discord-bot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  bot.py  genesis-bot.service  handlers.py  init_repo.md  push_bot.bat  pyproject.toml  railway.json  requirements.txt  role_stats.json  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: channels.example.json  env.example  reaction_roles.example.json
Батник/: push_bot.bat
